# TEQSmartSubmit

./: .gitignore  ADMIN_INSTALL_REQUEST.md  BILLING_ALTERNATIVES.md  BUILD_FIX.md  BUSTER_INTEGRATION.md  CAPTCHA_IMPROVEMENTS.md  CAPTCHA_RESOLVER_SUCCESS.md  CAPTCHA_SOLVER.md  CAPTCHA_SOLVER_FIX.md  CHECK_INSTALLATION.md  CHECK_SUBMISSION_STATUS.md  COMMANDS_TO_RUN.sh  COMPLETE_SYSTEM_SUMMARY.md  CONTACT_DETECTOR_IMPROVEMENTS.md  CREATE_ADMIN.md  DASHBOARD_OPTIMIZATION_CHECKLIST.md  DASHBOARD_OPTIMIZATION_PLAN.md  DASHBOARD_OPTIMIZATION_SUMMARY.md  DATABASE_CONNECTION_FIX.md  DEBUG_LOGS_ISSUE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENABLE_BILLING.md  FIND_LOGS_GUIDE.md  FIX_PATH_ISSUE.md  FORM_LOADING_REPORT.md  FREE_AI_ALTERNATIVES.md  FREE_TRIAL_CAPTCHA_SERVICES.md  GIT_DEPLOYMENT_GUIDE.md  GOOGLE_PLACES_API_SETUP.md  GUI_FIXES_SUMMARY.md  HEADLESS_MODE_EXPLAINED.md  HOW_TO_GET_CAPTCHA_API_KEY.md  HOW_TO_RUN.md  IMPROVEMENTS_SUMMARY.md  INSTALL_CUSTOMTKINTER.md  INSTALL_PLAYWRIGHT_BROWSERS.md  INSTALL_XVFB.md  LIVE_SAVE_PREVIEW.md  LOCAL_CAPTCHA_SOLVER.md  (+194 more)
backend/: .env  README.md  alembic.ini  env.example  env.local  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241113_0001_initial_schema.py  20241130_0002_add_contact_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: __init__.py  config.py  logging.py  security.py  sentry_config.py
backend/app/crud/: __init__.py  admin.py  domain.py
backend/app/db/: __init__.py  base.py  session.py  sync_session.py
backend/tests/: test_health.py
(+239 files in other folders)
